--- a/SuperMarket/SuperMarket/SuperMarket.csproj
+++ b/SuperMarket/SuperMarket/SuperMarket.csproj
@@ -79,38 +79,62 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Models\SuperMarketDB.Context.cs">
+    <Compile Include="Models\SuperMarketdb.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>SuperMarketDB.Context.tt</DependentUpon>
+      <DependentUpon>SuperMarketdb.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\SuperMarketDB.cs">
+    <Compile Include="Models\SuperMarketdb.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>SuperMarketDB.tt</DependentUpon>
+      <DependentUpon>SuperMarketdb.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\SuperMarketDB.Designer.cs">
+    <Compile Include="Models\SuperMarketdb.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>SuperMarketDB.edmx</DependentUpon>
+      <DependentUpon>SuperMarketdb.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\tb_cliente.cs">
-      <DependentUpon>SuperMarketDB.tt</DependentUpon>
+      <DependentUpon>SuperMarketdb.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\tb_compra.cs">
-      <DependentUpon>SuperMarketDB.tt</DependentUpon>
+      <DependentUpon>SuperMarketdb.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\tb_compra_has_tb_produto.cs">
-      <DependentUpon>SuperMarketDB.tt</DependentUpon>
+      <DependentUpon>SuperMarketdb.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\tb_enderecocliente.cs">
-      <DependentUpon>SuperMarketDB.tt</DependentUpon>
+      <DependentUpon>SuperMarketdb.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\tb_produto.cs">
-      <DependentUpon>SuperMarketDB.tt</DependentUpon>
+      <DependentUpon>SuperMarketdb.tt</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\Cliente\frmCliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Cliente\frmCliente.Designer.cs">
+      <DependentUpon>frmCliente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Cliente\frmConsultarCliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Cliente\frmConsultarCliente.Designer.cs">
+      <DependentUpon>frmConsultarCliente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Produto\frmConsultarProduto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Produto\frmConsultarProduto.Designer.cs">
+      <DependentUpon>frmConsultarProduto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Produto\frmProduto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Produto\frmProduto.Designer.cs">
+      <DependentUpon>frmProduto.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -120,12 +144,24 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EntityDeploy Include="Models\SuperMarketDB.edmx">
+    <EmbeddedResource Include="UI\Cliente\frmCliente.resx">
+      <DependentUpon>frmCliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Cliente\frmConsultarCliente.resx">
+      <DependentUpon>frmConsultarCliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Produto\frmConsultarProduto.resx">
+      <DependentUpon>frmConsultarProduto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Produto\frmProduto.resx">
+      <DependentUpon>frmProduto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EntityDeploy Include="Models\SuperMarketdb.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>SuperMarketDB.Designer.cs</LastGenOutput>
+      <LastGenOutput>SuperMarketdb.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="Models\SuperMarketDB.edmx.diagram">
-      <DependentUpon>SuperMarketDB.edmx</DependentUpon>
+    <None Include="Models\SuperMarketdb.edmx.diagram">
+      <DependentUpon>SuperMarketdb.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -142,24 +178,22 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="UI\Cliente\" />
     <Folder Include="UI\Compra\" />
-    <Folder Include="UI\Produto\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Models\SuperMarketDB.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>SuperMarketDB.edmx</DependentUpon>
-      <LastGenOutput>SuperMarketDB.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="Models\SuperMarketDB.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>SuperMarketDB.edmx</DependentUpon>
-      <LastGenOutput>SuperMarketDB.cs</LastGenOutput>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Models\SuperMarketdb.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>SuperMarketdb.edmx</DependentUpon>
+      <LastGenOutput>SuperMarketdb.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\SuperMarketdb.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>SuperMarketdb.edmx</DependentUpon>
+      <LastGenOutput>SuperMarketdb.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
