--- a/SuperMarket/SuperMarket/App.config
+++ b/SuperMarket/SuperMarket/App.config
@@ -21,6 +21,12 @@
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider></providers>
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider>
+    </providers>
   </entityFramework>
-<connectionStrings><add name="supermarket_dbEntities" connectionString="metadata=res://*/Models.SuperMarketDB.csdl|res://*/Models.SuperMarketDB.ssdl|res://*/Models.SuperMarketDB.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=supermarket_db&quot;" providerName="System.Data.EntityClient" /><add name="supermarket_dbEntities1" connectionString="metadata=res://*/Models.SuperMarketdb.csdl|res://*/Models.SuperMarketdb.ssdl|res://*/Models.SuperMarketdb.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=supermarket_db&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  <connectionStrings>
+    <add name="supermarket_dbEntities" connectionString="metadata=res://*/Models.SuperMarketDB.csdl|res://*/Models.SuperMarketDB.ssdl|res://*/Models.SuperMarketDB.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=supermarket_db&quot;" providerName="System.Data.EntityClient" />
+    <add name="supermarket_dbEntities1" connectionString="metadata=res://*/Models.SuperMarketdb.csdl|res://*/Models.SuperMarketdb.ssdl|res://*/Models.SuperMarketdb.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=supermarket_db&quot;" providerName="System.Data.EntityClient" />
+    <add name="supermarket_dbEntities2" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=1234;database=supermarket_db&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>
