--- a/SuperMarket/SuperMarket/App.config
+++ b/SuperMarket/SuperMarket/App.config
@@ -7,12 +7,6 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
-  <system.data>
-    <DbProviderFactories>
-      <remove invariant="MySql.Data.MySqlClient" />
-      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
-    </DbProviderFactories>
-  </system.data>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -21,12 +15,21 @@
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider>
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.10.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider>
     </providers>
   </entityFramework>
   <connectionStrings>
     <add name="supermarket_dbEntities" connectionString="metadata=res://*/Models.SuperMarketDB.csdl|res://*/Models.SuperMarketDB.ssdl|res://*/Models.SuperMarketDB.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=supermarket_db&quot;" providerName="System.Data.EntityClient" />
     <add name="supermarket_dbEntities1" connectionString="metadata=res://*/Models.SuperMarketdb.csdl|res://*/Models.SuperMarketdb.ssdl|res://*/Models.SuperMarketdb.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=supermarket_db&quot;" providerName="System.Data.EntityClient" />
     <add name="supermarket_dbEntities2" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=1234;database=supermarket_db&quot;" providerName="System.Data.EntityClient" />
+    <add name="supermarket_dbEntities3" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=1234;database=supermarket_db&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.19.0" newVersion="8.0.19.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
